--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RailQuant AI — Generate take‑offs & BQQs from drawings</title>
-    <meta name="description" content="RailQuant AI reads rail civils drawings and generates priced BoQs using your rates. Upload PDFs, review take‑off, export to Excel.">
-    <link rel="icon" href="/favicon.svg">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
-  </body>
-</html>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RailQuant</title>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SMDWNQY4WX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-SMDWNQY4WX');
+  </script>
+</head>
+
