--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
   </head>
 
   <body>
+    <!-- THIS id MUST be 'root' to match main.jsx -->
     <div id="root"></div>
+    <!-- THIS path MUST be exactly this for Vite -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
 
