--- a/index.html
+++ b/index.html
@@ -1,20 +1,58 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RailQuant</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-SMDWNQY4WX"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- ✅ Primary Meta Tags -->
+  <title>RailQuant AI – AI software for rail construction estimating and drawing takeoffs</title>
+  <meta name="title" content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs">
+  <meta name="description" content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs. NDA available. Optional UK-based data hosting.">
 
-  gtag('config', 'G-SMDWNQY4WX');
-</script>
+  <!-- ✅ Canonical -->
+  <link rel="canonical" href="https://www.railquant.co.uk/" />
+
+  <!-- ✅ Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.railquant.co.uk/">
+  <meta property="og:title" content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs">
+  <meta property="og:description" content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs. NDA available. Optional UK-based data hosting.">
+  <meta property="og:image" content="https://www.railquant.co.uk/og-image.jpg"> <!-- Replace with your real image -->
+
+  <!-- ✅ Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://www.railquant.co.uk/">
+  <meta name="twitter:title" content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs">
+  <meta name="twitter:description" content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs. NDA available. Optional UK-based data hosting.">
+  <meta name="twitter:image" content="https://www.railquant.co.uk/og-image.jpg"> <!-- Replace with your real image -->
+
+  <!-- ✅ Structured Data (SEO) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "RailQuant AI",
+    "url": "https://www.railquant.co.uk/",
+    "description": "AI software for rail construction estimating and drawing takeoffs with Excel-ready outputs.",
+    "applicationCategory": "BusinessApplication",
+    "operatingSystem": "Web",
+    "publisher": {
+      "@type": "Organization",
+      "name": "RailQuant AI"
+    }
+  }
+  </script>
+
+  <!-- ✅ Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SMDWNQY4WX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-SMDWNQY4WX');
+  </script>
+</head>
 
   </head>
 
