--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- ✅ Primary Meta Tags -->
+  <!-- Primary Meta Tags -->
   <title>RailQuant AI – AI software for rail construction estimating and drawing takeoffs</title>
   <meta name="title" content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs">
   <meta name="description" content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs. NDA available. Optional UK-based data hosting.">
 
-  <!-- ✅ Canonical -->
+  <!-- Canonical -->
   <link rel="canonical" href="https://www.railquant.co.uk/" />
 
-  <!-- ✅ Open Graph / Facebook -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.railquant.co.uk/">
   <meta property="og:title" content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs">
   <meta property="og:description" content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs. NDA available. Optional UK-based data hosting.">
-  <meta property="og:image" content="https://www.railquant.co.uk/og-image.jpg"> <!-- Replace with your real image -->
+  <meta property="og:image" content="https://www.railquant.co.uk/og-image.jpg"><!-- replace with your image -->
 
-  <!-- ✅ Twitter -->
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://www.railquant.co.uk/">
   <meta name="twitter:title" content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs">
   <meta name="twitter:description" content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs. NDA available. Optional UK-based data hosting.">
-  <meta name="twitter:image" content="https://www.railquant.co.uk/og-image.jpg"> <!-- Replace with your real image -->
+  <meta name="twitter:image" content="https://www.railquant.co.uk/og-image.jpg"><!-- replace with your image -->
 
-  <!-- ✅ Structured Data (SEO) -->
+  <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -37,14 +37,11 @@
     "description": "AI software for rail construction estimating and drawing takeoffs with Excel-ready outputs.",
     "applicationCategory": "BusinessApplication",
     "operatingSystem": "Web",
-    "publisher": {
-      "@type": "Organization",
-      "name": "RailQuant AI"
-    }
+    "publisher": { "@type": "Organization", "name": "RailQuant AI" }
   }
   </script>
 
-  <!-- ✅ Google Analytics -->
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-SMDWNQY4WX"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -54,14 +51,15 @@
   </script>
 </head>
 
-  </head>
+<body>
+  <!-- This id must be 'root' to match main.jsx -->
+  <div id="root"></div>
 
-  <body>
-    <!-- THIS id MUST be 'root' to match main.jsx -->
-    <div id="root"></div>
-    <!-- THIS path MUST be exactly this for Vite -->
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <!-- Vite entry -->
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
+
+  
 
 
