--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 <body>
   <!-- This id must be 'root' to match main.jsx -->
   <div id="root"></div>
+<script type="module" src="/src/main.jsx"></script>
+
 
   <!-- Vite entry -->
   <script type="module" src="/src/main.jsx"></script>
