--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RailQuant AI – AI software for rail construction estimating and drawing takeoffs</title>
-    <link rel="icon" href="/favicon.ico" />
+    <title>RailQuant AI</title>
   </head>
   <body>
-    <!-- React root (must exist and id must be 'root') -->
     <div id="root"></div>
-
-    <!-- Vite entry (must point to your actual entry file) -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
