--- a/index.html
+++ b/index.html
@@ -2,8 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RailQuant AI</title>
+
+    <!-- Primary Meta -->
+    <meta name="title" content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs">
+    <meta name="description" content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs.">
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://www.railquant.co.uk/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.railquant.co.uk/">
+    <meta property="og:title" content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs">
+    <meta property="og:description" content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs.">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SMDWNQY4WX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-SMDWNQY4WX');
+    </script>
   </head>
   <body>
     <div id="root"></div>
@@ -11,3 +34,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
