--- a/index.html
+++ b/index.html
@@ -2,36 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RailQuant AI</title>
 
-    <!-- Primary Meta -->
-    <meta name="title" content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs">
-    <meta name="description" content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs.">
-
-    <!-- Canonical -->
-    <link rel="canonical" href="https://www.railquant.co.uk/" />
+    <!-- Primary meta -->
+    <meta
+      name="title"
+      content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs"
+    />
+    <meta
+      name="description"
+      content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs."
+    />
 
     <!-- Open Graph -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.railquant.co.uk/">
-    <meta property="og:title" content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs">
-    <meta property="og:description" content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs.">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="RailQuant AI" />
+    <meta
+      property="og:description"
+      content="AI software for rail construction estimating and drawing takeoffs."
+    />
+    <meta property="og:url" content="https://www.railquant.co.uk/" />
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SMDWNQY4WX"></script>
+    <!-- Google tag (gtag.js) — optional -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SMDWNQV4WX"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag(){ dataLayer.push(arguments); }
       gtag('js', new Date());
-      gtag('config', 'G-SMDWNQY4WX');
+      gtag('config', 'G-SMDWNQV4WX');
     </script>
   </head>
-  <body>
+  <body class="bg-white text-slate-900">
     <div id="root"></div>
-    <!-- Vite entry -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
