--- a/index.html
+++ b/index.html
@@ -2,39 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RailQuant AI</title>
-
-    <!-- Primary meta -->
-    <meta
-      name="title"
-      content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs"
-    />
-    <meta
-      name="description"
-      content="RailQuant AI automates rail construction estimating and drawing takeoffs with Excel-ready outputs."
-    />
-
-    <!-- Open Graph -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="RailQuant AI" />
-    <meta
-      property="og:description"
-      content="AI software for rail construction estimating and drawing takeoffs."
-    />
-    <meta property="og:url" content="https://www.railquant.co.uk/" />
-
-    <!-- Google tag (gtag.js) — optional -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SMDWNQV4WX"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){ dataLayer.push(arguments); }
-      gtag('js', new Date());
-      gtag('config', 'G-SMDWNQV4WX');
-    </script>
   </head>
-  <body class="bg-white text-slate-900">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
