--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>RailQuant AI</title>
+
+    <!-- favicon: use whichever you have -->
     <link rel="icon" href="/favicon.svg" />
-    <!-- your GA or meta tags can live here -->
+    <!-- If you only have .ico:  <link rel="icon" href="/favicon.ico" /> -->
+    <meta
+      name="description"
+      content="RailQuant AI – AI software for rail construction estimating and drawing takeoffs with Excel-ready outputs."
+    />
+    <!-- Google tag (gtag.js) – if you use it -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script> -->
+    <!-- <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)};gtag('js', new Date());gtag('config','G-XXXXXXX');</script> -->
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
 
