--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     }
     </script>
 
-    <!-- GA4: replace G-XXXXXXXXXX with your real Measurement ID -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <!-- GA4: replace G-SMDWNQY4WX with your real Measurement ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SMDWNQY4WX"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){ dataLayer.push(arguments); }
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX');
+      gtag('config', 'G-SMDWNQY4WX');
     </script>
 
     <!-- Vite entry -->
