--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta name="theme-color" content="#0f172a" />
 
     <!-- Google Search Console (optional: replace with your verification token) -->
-    <!-- <meta name="google-site-verification" content="PASTE_YOUR_TOKEN_HERE" /> -->
+    <!-- <meta name="google-site-verification" content="KnZckJjFYkczxINNmqHt8ygTuYes1Sv-L3JW" /> -->
 
     <!-- JSON-LD: Organization + Website -->
     <script type="application/ld+json">
