--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <meta property="og:description" content="Speed up quantities, reduce manual errors, and deliver Excel-ready outputs. AI software built for rail and civils estimators." />
     <meta property="og:url" content="https://railquant.co.uk/" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://railquant.co.uk/og-image.jpg" />
+    <meta property="og:image" content="https://railquant.co.uk/og-image.png" />
     <meta property="og:site_name" content="RailQuant AI" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="RailQuant AI — Rail Construction Estimating & Drawing Takeoffs" />
     <meta name="twitter:description" content="AI-powered rail estimating software delivering Excel-ready outputs and consistency across projects." />
-    <meta name="twitter:image" content="https://railquant.co.uk/og-image.jpg" />
+    <meta name="twitter:image" content="https://railquant.co.uk/og-image.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.svg" />
